# kpis

./: .gitignore  pyproject.toml  vercel.json
app/: __init__.py  database.py  main.py  models.py  schemas.py
app/services/: agent.py  ingest.py  parser.py  vectorizer.py
docs/: ui_design_overview.md
docs/empire_os/: implementation_briefing.md  vercel_deployment.md
docs/wireframes/: sales_operations.md
fixtures/sales_ops/: call_metrics_console.json  coaching_queue.json  pipeline_kanban.json  revenue_projection.json  script_drawer.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: DashboardHeader.jsx  DocumentSearch.jsx  EventTimeline.jsx  MetricSummary.jsx  PurchaseList.jsx  SuggestionBoard.jsx  UploadPanel.jsx  VendorTable.jsx
tests/: conftest.py  test_empire.py
