[project]
name = "empire-os"
version = "0.1.0"
description = "First prototype of the Empire system backend"
authors = [{name = "Empire Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.103",
    "uvicorn~=0.23",
    "sqlalchemy~=2.0",
    "pydantic~=1.10",
    "python-multipart~=0.0.9",
    "numpy~=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4",
    "httpx~=0.25"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
